--- a/HaierOven/Base.lproj/Main.storyboard
+++ b/HaierOven/Base.lproj/Main.storyboard
@@ -636,15 +636,47 @@
                                             <rect key="frame" x="0.0" y="0.0" width="130" height="100"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¥" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OTa-uP-vIa">
+                                            <rect key="frame" x="84" y="86" width="7" height="15"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="15" id="7Sf-9P-s9k"/>
+                                                <constraint firstAttribute="width" constant="7" id="x1g-2Z-Pmc"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <color key="textColor" red="1" green="0.6588235294" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="35" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KmC-UT-shX">
+                                            <rect key="frame" x="92" y="83" width="17" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" red="1" green="0.6588235294" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=".00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z4h-Ie-dPS">
+                                            <rect key="frame" x="108" y="86" width="18" height="15"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="18" id="hfM-Xo-E8Q"/>
+                                                <constraint firstAttribute="height" constant="15" id="txr-au-3St"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <color key="textColor" red="1" green="0.6588235294" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <constraints>
                                     <constraint firstItem="rXD-ga-ot7" firstAttribute="leading" secondItem="lfd-To-o7G" secondAttribute="leading" id="030-t9-gAr"/>
+                                    <constraint firstItem="rXD-ga-ot7" firstAttribute="top" secondItem="OTa-uP-vIa" secondAttribute="bottom" constant="-1" id="2to-3n-Ivo"/>
                                     <constraint firstAttribute="trailing" secondItem="rXD-ga-ot7" secondAttribute="trailing" id="AWl-rn-T8W"/>
                                     <constraint firstItem="rXD-ga-ot7" firstAttribute="top" secondItem="oLk-0I-hww" secondAttribute="bottom" id="C9e-4D-rXR"/>
                                     <constraint firstItem="oLk-0I-hww" firstAttribute="leading" secondItem="lfd-To-o7G" secondAttribute="leading" id="Ghk-Yn-Hyp"/>
+                                    <constraint firstItem="KmC-UT-shX" firstAttribute="leading" secondItem="OTa-uP-vIa" secondAttribute="trailing" constant="1" id="HsV-o8-44P"/>
+                                    <constraint firstAttribute="trailing" secondItem="Z4h-Ie-dPS" secondAttribute="trailing" constant="4" id="UmV-hb-naK"/>
+                                    <constraint firstAttribute="trailing" secondItem="KmC-UT-shX" secondAttribute="trailing" constant="21" id="ZmI-Bk-ijv"/>
+                                    <constraint firstItem="rXD-ga-ot7" firstAttribute="top" secondItem="KmC-UT-shX" secondAttribute="bottom" constant="-1" id="jYf-UH-nfe"/>
                                     <constraint firstItem="oLk-0I-hww" firstAttribute="top" secondItem="lfd-To-o7G" secondAttribute="top" id="qJ7-RJ-djP"/>
+                                    <constraint firstItem="rXD-ga-ot7" firstAttribute="top" secondItem="Z4h-Ie-dPS" secondAttribute="bottom" constant="-1" id="siD-wQ-1S3"/>
                                     <constraint firstAttribute="trailing" secondItem="oLk-0I-hww" secondAttribute="trailing" id="yLE-uY-fDx"/>
                                     <constraint firstAttribute="bottom" secondItem="rXD-ga-ot7" secondAttribute="bottom" id="zqm-iy-7Kb"/>
                                 </constraints>
@@ -652,6 +684,7 @@
                                 <connections>
                                     <outlet property="image" destination="oLk-0I-hww" id="YUB-56-zN5"/>
                                     <outlet property="label" destination="rXD-ga-ot7" id="qwz-8k-cyO"/>
+                                    <outlet property="priceLabel" destination="KmC-UT-shX" id="Yii-A9-WHE"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -2018,12 +2051,12 @@
                                         <constraint firstItem="Cny-lP-LFY" firstAttribute="leading" secondItem="WxK-Ox-apY" secondAttribute="leading" constant="12" id="DNy-Se-iUI"/>
                                         <constraint firstItem="Hhs-Hv-aan" firstAttribute="top" secondItem="Cny-lP-LFY" secondAttribute="bottom" constant="5" id="EVm-cR-Wy8"/>
                                         <constraint firstItem="eq4-cB-OTE" firstAttribute="trailing" secondItem="Bmq-jU-SoE" secondAttribute="trailing" id="J2B-Te-Kaw"/>
-                                        <constraint firstItem="Bmq-jU-SoE" firstAttribute="top" secondItem="Hhs-Hv-aan" secondAttribute="bottom" constant="6" id="P8m-Zv-4Eh"/>
                                         <constraint firstAttribute="trailing" secondItem="Bmq-jU-SoE" secondAttribute="trailing" constant="13" id="Qbd-hZ-r8c"/>
                                         <constraint firstAttribute="trailing" secondItem="RKT-In-bST" secondAttribute="trailing" id="U8j-gs-ID3"/>
                                         <constraint firstItem="Cny-lP-LFY" firstAttribute="top" secondItem="WxK-Ox-apY" secondAttribute="top" constant="98" id="eR8-9t-RYL"/>
                                         <constraint firstItem="RKT-In-bST" firstAttribute="leading" secondItem="WxK-Ox-apY" secondAttribute="leading" id="i8O-ii-QWh"/>
                                         <constraint firstAttribute="trailing" secondItem="d9i-Lk-cnN" secondAttribute="trailing" constant="8" id="sny-R5-LPr"/>
+                                        <constraint firstItem="Bmq-jU-SoE" firstAttribute="top" secondItem="d9i-Lk-cnN" secondAttribute="bottom" constant="6" id="uxk-tk-yyy"/>
                                         <constraint firstItem="RKT-In-bST" firstAttribute="top" secondItem="WxK-Ox-apY" secondAttribute="top" constant="1" id="yo7-wc-wcb"/>
                                     </constraints>
                                 </tableViewCellContentView>
@@ -2169,44 +2202,6 @@
                                 <constraint firstAttribute="centerX" secondItem="bJ3-VF-ZSz" secondAttribute="centerX" id="uHC-6f-ebl"/>
                             </constraints>
                         </view>
-                        <barButtonItem key="rightBarButtonItem" style="plain" id="89D-ub-06W">
-                            <view key="customView" contentMode="scaleToFill" id="yI8-Ac-yip">
-                                <rect key="frame" x="232" y="5" width="71" height="33"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WZx-Q1-Mrg">
-                                        <rect key="frame" x="11" y="2" width="26" height="26"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="26" id="dhK-nV-x2S"/>
-                                            <constraint firstAttribute="height" constant="26" id="qEU-fl-v7V"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                        <state key="normal" image="sousuo.png">
-                                            <color key="titleColor" red="0.62745098040000002" green="0.30588235289999999" blue="0.1058823529" alpha="1" colorSpace="calibratedRGB"/>
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wn2-gS-3tl">
-                                        <rect key="frame" x="45" y="2" width="26" height="26"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="26" id="RX7-bc-ZSb"/>
-                                            <constraint firstAttribute="width" constant="26" id="vrr-O6-1b9"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                        <state key="normal" image="xinzeng.png">
-                                            <color key="titleColor" red="0.62745098040000002" green="0.30588235289999999" blue="0.1058823529" alpha="1" colorSpace="calibratedRGB"/>
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                    </button>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="wn2-gS-3tl" secondAttribute="trailing" id="0qR-pL-IJr"/>
-                                    <constraint firstItem="WZx-Q1-Mrg" firstAttribute="top" secondItem="yI8-Ac-yip" secondAttribute="top" constant="2" id="GNX-vS-YWu"/>
-                                    <constraint firstItem="wn2-gS-3tl" firstAttribute="leading" secondItem="WZx-Q1-Mrg" secondAttribute="trailing" constant="8" id="cfY-bo-9T6"/>
-                                    <constraint firstItem="wn2-gS-3tl" firstAttribute="top" secondItem="yI8-Ac-yip" secondAttribute="top" constant="2" id="zdO-z1-fBW"/>
-                                </constraints>
-                            </view>
-                        </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
