--- a/HaierOven/Base.lproj/Main.storyboard
+++ b/HaierOven/Base.lproj/Main.storyboard
@@ -3081,6 +3081,10 @@
                                                         <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                         <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
+                                                    <state key="selected">
+                                                        <color key="titleColor" red="1" green="0.6588235294" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <color key="titleShadowColor" red="1" green="0.6588235294" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    </state>
                                                     <connections>
                                                         <action selector="alertView:" destination="ev3-io-dBY" eventType="touchUpInside" id="M2b-9q-KCA"/>
                                                     </connections>
